--- a/main.html
+++ b/main.html
@@ -9,6 +9,52 @@
 </head>
 <body>
     <!-- add table here -->
+	<table class="rounded-table">
+		<thead>
+			<tr>
+				<th>NAME</th>
+				<th>KILLS</th>
+				<th>SAVED</th>
+				<th>DEATHS</th>
+				<th>REVIVES</th>
+				<th>WIN</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class="tr0">
+				<th>Hackerman</th>
+				<th>10</th>
+				<th>0</th>
+				<th>1</th>
+				<th>0</th>
+				<th>0</th>
+			</tr>
+			<tr class="tr1">
+				<th>Nischal</th>
+				<th>13</th>
+				<th>4</th>
+				<th>8</th>
+				<th>7</th>
+				<th>1</th>
+			</tr>
+			<tr class="tr0">
+				<th>Hackerman</th>
+				<th>10</th>
+				<th>0</th>
+				<th>1</th>
+				<th>0</th>
+				<th>0</th>
+			</tr>
+			<tr class="tr1">
+				<th>Nischal</th>
+				<th>13</th>
+				<th>4</th>
+				<th>8</th>
+				<th>7</th>
+				<th>1</th>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
